Fix bug #76054. sr=brendan, r=beard. Generate lower case tags for all the string tagify'ing helper functions like 'big()' etc. to be XHTML compliant.